opam-version: "1.2"
maintainer: "Etienne Millon <etienne@cryptosense.com>"
authors: "Etienne Millon <etienne@cryptosense.com>"
homepage: "https://github.com/cryptosense/multipart-form-data"
bug-reports: "https://github.com/cryptosense/multipart-form-data/issues"
license: "BSD-2"
dev-repo: "https://github.com/cryptosense/multipart-form-data.git"
doc: "https://cryptosense.github.io/multipart-form-data/doc"
build: [
  ["dune" "subst" "-n" name] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
build-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]
depends: [
  "dune" {build}
  "ocaml-migrate-parsetree" {build}
  "alcotest" {test}
  "stringext"
  "lwt"
  "lwt_ppx"
]
